
ChangeLog
---------

Version 2021.01.00-a3 - ?-???-2021:
  - Added serial port support, e.g.
        OPEN "/dev/ttyS0: 115200" As #1
    this is very preliminary and in need of extensive user testing,
    see README for details.
  - Added OPTION CODEPAGE page$ command:
    - causes character bytes in the range 128-255 to be translated to Unicode
      (UTF-8) when printed to the *console* according to a given code page /
      mapping.
    - supported values of page$ are currently:
      - "NONE"   : no mapping, characters 128-255 are written as-is.
      - "CMM2"   : best effort mapping to the characters of the CMM2 font.
      - "CP437"  : characters 128-255 of the original IBM PC code 437.
                   Note this was a non-ANSI code page which also included
                   characters 1-31 which are not available in this mapping,
                   but see "MMB4L".
      - "CP1252" : the classic Windows-1252 Latin alphabet code page.
      - "MMB4L"  : as "CP437" but with characters 129-159 replaced by the
                   original non-ANSI CP437 characters 1-31 and with additional
                   "useful" characters in positions 128, 161-170 and 255.
  - Added CHR$(UTF8 codepoint%) function:
    - given a Unicode code-point returns the 1-4 character string encoding that
      character in UTF-8 format.
    - printing such characters is not compatible with OPTION CODEPAGE being
      set.
  - Added AUTOSAVE file$ command:
    - note that as with the CMM2 there is no CRUNCH option; AUTOSAVE writes to a
      file and MMB4L always crunches the program automatically when it loads it
      for execution.
  - Added CONSOLE SETSIZE [ATLEAST] width%, height% command:
    - sends an XTerm control sequence to set the terminal size.
    - if the optional ATLEAST modifier is used then will not reduce the
      terminal width or height.
  - Added PRINT @(x%, y%) expression:
    - unlike the CMM2, x% & y% are obligatory and in character coordinates,